objects/Google_App__c.object
<CustomObject>
    <fields>
        <fullName>AccessToken__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>Scope of API access, e.g. &quot;https://www.googleapis.com/auth/calendar&quot; provides read-write access to Calendars, Calendar Events and Calendar ACLs</description>
        <inlineHelpText>Scope of API access, e.g. &quot;https://www.googleapis.com/auth/calendar&quot; provides read-write access to Calendars, Calendar Events and Calendar ACLs</inlineHelpText>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clientID__c</fullName>
        <inlineHelpText>Also know as the Application ID</inlineHelpText>
        <label>Client ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clientSecret__c</fullName>
        <inlineHelpText>Also known as Application Secret</inlineHelpText>
        <label>Client Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>expiresIn__c</fullName>
        <description>The remaining lifetime on the access token (in seconds)</description>
        <inlineHelpText>The remaining lifetime on the access token (in seconds)</inlineHelpText>
        <label>Expires In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Google App</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GoogleApp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>